Code optmisation and bad code practices removed